--- a/reagan-ongaya/package.json
+++ b/reagan-ongaya/package.json
@@ -10,8 +10,8 @@
     "@testing-library/user-event": "^13.2.1",
     "emailjs-com": "^3.2.0",
     "install": "^0.13.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "react-pdf": "^9.1.1",
     "react-router-dom": "^7.0.2",
