--- a/reagan-ongaya/package.json
+++ b/reagan-ongaya/package.json
@@ -2,6 +2,7 @@
   "name": "reagan-ongaya",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/reagan-ongaya",
   "dependencies": {
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
@@ -14,8 +15,9 @@
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "react-pdf": "^9.1.1",
-    "react-router-dom": "^7.0.2",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "reagan-ongaya": "file:",
     "tailwind-clip-path": "^1.0.0",
     "web-vitals": "^2.1.0"
   },
