--- a/reagan-ongaya/vercel.json
+++ b/reagan-ongaya/vercel.json
@@ -1,5 +1,5 @@
-{
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/reagan-ongaya/$1" }
-  ]
-}
+// {
+//   "rewrites": [
+//     { "source": "/(.*)", "destination": "/reagan-ongaya/$1" }
+//   ]
+// }
