--- a/reagan-ongaya/vercel.json
+++ b/reagan-ongaya/vercel.json
@@ -1,5 +1,16 @@
-// {
-//   "rewrites": [
-//     { "source": "/(.*)", "destination": "/reagan-ongaya/$1" }
-//   ]
-// }
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build"
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/$1"
+    }
+  ]
+}
+
